--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,8 @@
 }
 
 .header__add-clothes-btn {
-  margin: 0 20px 0 auto;
+  margin: 0 20px 0;
+  padding: 0;
   line-height: 25px;
   border: none;
   background: transparent;
@@ -21,6 +22,11 @@
 
 .header__add-clothes-btn:hover {
   cursor: pointer;
+}
+
+.header__button-container {
+  display: flex;
+  margin-left: auto;
 }
 
 .header__user-container {
@@ -35,4 +41,12 @@
 
 .header__username {
   margin: 0;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #000;
+}
+
+@media screen and (max-width: 627px) {
 }
